--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </table>
       </div>
     </section>
-    <section>
+    <section id="iContact">
       <div>
         <h2>Contacto</h2>
         <form>
