--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head >
+<head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./css/index.css">
 
-  <title>Base 2 By Web 4B</title>
-  <meta name="title" content="Base 2 By Web 4B" />
+  <title>Agencia Hogar Menacho</title>
+  <meta name="title" content="Diseño y desarrollo web" />
   <meta name="description"
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
 
-  <meta property="og:type" content="website" />
+  <!-- <meta property="og:type" content="website" />
   <meta property="og:url" content="https://elliotxleo.github.io/tecsup-frontend-o-g17/" />
   <meta property="og:title" content="Base 2 By Web 4B" />
   <meta property="og:description"
@@ -23,11 +23,11 @@
 
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://elliotxleo.github.io/tecsup-frontend-o-g17/" />
-  <meta property="twitter:title" content="Base 2 By Web 4B" />
+  <meta property="twitter:title" content="Diseño y desarrollo web" />
   <meta property="twitter:description"
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
   <meta property="twitter:image"
-    content="https://elliotxleo.github.io/tecsup-frontend-o-g17/assets/img/tecsup-frontend-o-g17.png" />
+    content="https://elliotxleo.github.io/tecsup-frontend-o-g17/assets/img/tecsup-frontend-o-g17.png" /> -->
 </head>
 
 <body class="body">
@@ -35,45 +35,54 @@
     <nav class="header-nav">
       <div class="header-nav__container">
         <a href="#iHero" class="header-nav__link-logo-container">
-          <img src="./assets/img/HM.jpg" alt="Logo Base 2" width="108" height="32" 
-          class="header-nav__link-logo"/>
+          <img src="./assets/img/dm.jfif" alt="Logo Base 2" width="108" height="32" class="header-nav__link-logo" />
         </a>
         <ul class="header-nav__menu-list-container">
           <li>
-            <a href="#iExperience" class="header-nav__menu-link">Experiencia</a>
+            <a href="https://www.linkedin.com/in/joelmenachoa/" target="_blank" rel="noopener noreferrer"
+              class="header-nav__menu-link header-nav__menu-link--active">Inicio</a>
+          </li>
+          <li>
+            <a href="#iExperience" class="header-nav__menu-link">La Agencia</a>
+          </li>
+          <li>
+            <a href="#iExperience" class="header-nav__menu-link">Servicios</a>
           </li>
           <li>
             <a href="#iContact" class="header-nav__menu-link">Contacto</a>
           </li>
-          <li>
-            <a href="https://www.linkedin.com/in/joelmenachoa/" target="_blank" rel="noopener noreferrer" 
-            class="header-nav__menu-link header-nav__menu-link--active">Joel Menacho</a>
-          </li>
+
         </ul>
       </div>
     </nav>
   </header>
+ 
   <main>
     <article class="i-hero" id="iHero">
       <div class="i-hero__container">
-      <div class="i-hero__info-container">
-          <h1 class="i-hero__info-title">Base 2 by Web 4B</h1>
-          <h2 class="i-hero__info-subtitle">Los mejores diseños y desarrollos de páginas web en el Perú</h2>
-          <p class="i-hero__info-paragraph">
-            Somos el mejor lugar donde puedes aprender sobre desarrollo web frontend. Asimismo, con Base 2 by Web 4B
-            puedes hacer realidad ese sueño que tienes en mente. ¡Cambia tu vida!
+        <div class="i-hero__info-container">
+          <h1 class="i-hero__info-title">Agencia de marketing</h1>
+          <h2 class="i-hero__info-subtitle">en el Perú</h2>
+          <header class="card__header">
+            <div class="card__header-img-container">
+               <p class="i-hero__info-paragraph">
+            Somos una agencia de marketing especialista en diseño de páginas web en Ica. Nuestro desarrollo son hechos a
+            medida y para cada tipo de presupuesto.
           </p>
-          <a href="https://www.linkedin.com/in/joelmenachoa/" class="i-hero__info-link" >¡Aprender gratis!</a>
+            </div>
+          </header>
+         
+          <a href="https://www.linkedin.com/in/joelmenachoa/" class="i-hero__info-link">¡Iniciemos tu proyecto!</a>
         </div>
         <div class="i-hero__img-container">
           <div class="i-hero__img-pro-tech-container">
             <img src="./assets/img/joelmenacho.jfif" alt="Joel Menacho" width="256" height="256"
-            class="i-hero__img-pro" />
-            <figure class="i-hero__img-tech-container">  
+              class="i-hero__img-pro" />
+            <figure class="i-hero__img-tech-container">
               <img src="./assets/svg/logo-html-5.svg" alt="HTML" width="64" height="64" class="i-hero__img-tech" />
               <img src="./assets/svg/logo-css-3.svg" alt="CSS" width="64" height="64" class="i-hero__img-tech" />
-              <img src="./assets/svg/logo-javascript.svg" alt="JavaScript" width="64" height="64" 
-              class="i-hero__img-tech" />
+              <img src="./assets/svg/logo-javascript.svg" alt="JavaScript" width="64" height="64"
+                class="i-hero__img-tech" />
               <img src="./assets/svg/logo-react.svg" alt="React" width="64" height="64" class="i-hero__img-tech" />
             </figure>
           </div>
@@ -184,11 +193,11 @@
           </li>
         </ul>
         <h2>
-          🦄Copyright &copy; 2022
+          Sitio creado con mucho cariño por
           <a href="https://www.linkedin.com/in/joelmenachoa/" target="_blank" rel="noopener noreferrer">
-            Base2
+            Joel! ❤️
           </a>
-          Todos los derechos reservados.🦄
+          / Todos los derechos reservados.🦄
         </h2>
       </div>
     </nav>
