--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="shortcut icon" href="./assets/img/favicon.jfif" type="image/x-icon" />
   <link rel="stylesheet" href="./css/index.css">
 
-  <title>Base 2 By Web 4B</title>
-  <meta name="title" content="Base 2 By Web 4B" />
+  <title>Agencia Digital Menacho</title>
+  <meta name="title" content="Agencia Digital Menacho" />
   <meta name="description"
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
 
