--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
+<head >
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="shortcut icon" href="./assets/img/favicon.jfif" type="image/x-icon" />
   <link rel="stylesheet" href="./css/index.css">
 
-  <title>Agencia Digital Menacho</title>
-  <meta name="title" content="Agencia Digital Menacho" />
+  <title>Agencia Hogar Menacho</title>
+  <meta name="title" content="Diseño y desarrollo web" />
   <meta name="description"
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
 
@@ -48,6 +48,10 @@
             <a href="https://www.linkedin.com/in/joelmenachoa/" target="_blank" rel="noopener noreferrer" 
             class="header-nav__menu-link header-nav__menu-link--active">Joel Menacho</a>
           </li>
+          <li>
+            <a href="#iContact" class="header-nav__menu-link">Contacto</a>
+          </li>
+
         </ul>
       </div>
     </nav>
