fix nuevo cambio

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
           <a href="https://www.linkedin.com/in/joelmenachoa/" target="_blank" rel="noopener noreferrer">
             Joel! ❤️
           </a>
-          Todos los derechos reservados.🦄
+          Todos los derechos reservadoss.🦄
         </h2>
       </div>
     </nav>
