--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head >
+<head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="./assets/img/favicon.jfif" type="image/x-icon" />
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="./css/index.css">
 
   <title>Agencia Hogar Menacho</title>
@@ -20,6 +20,7 @@
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
   <meta property="og:image"
     content="https://elliotxleo.github.io/tecsup-frontend-o-g17/assets/img/tecsup-frontend-o-g17.png">
+
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://elliotxleo.github.io/tecsup-frontend-o-g17/" />
   <meta property="twitter:title" content="Diseño y desarrollo web" />
@@ -45,8 +46,7 @@
             <a href="#iExperience" class="header-nav__menu-link">La Agencia</a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/joelmenachoa/" target="_blank" rel="noopener noreferrer" 
-            class="header-nav__menu-link header-nav__menu-link--active">Joel Menacho</a>
+            <a href="#iExperience" class="header-nav__menu-link">Servicios</a>
           </li>
           <li>
             <a href="#iContact" class="header-nav__menu-link">Contacto</a>
@@ -89,51 +89,51 @@
         </div>
       </div>
     </article>
-    <section>
+    <section id="iExperience">
       <div>
-        <h2>Servicios</h2>
+        <h2>Experiencia</h2>
         <table>
           <thead>
             <tr>
-              <th><h1>Desarollo de software</h1></th>
-              <th> <h1>Sistemas de información</h1></th>
-              <th><h1>Gestión empresarial</h1></th>
-              <th><h1>Marketing Digital</h1></th>
+              <th>Empresa</th>
+              <th>Cargo</th>
+              <th>Funciones</th>
+              <th>Periodo</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td><li>Python</li></td>
-              <td><li>Facturas electronicas</li></td>
+              <td>HogarMenacho</td>
+              <td>Frontend Developer</td>
               <td>
                 <ul>
                   <li>Desarrollo de aplicaciones e-commerce con React bajo el marco de trabajo Scrum.</li>
                   <li>Mantenimiento web: Actualización de diseño, optimización y adición de funcionalidades.</li>
                 </ul>
               </td>
-              <td><li>Diseño gráfico</li></td>
+              <td>Julio 2021, presente</td>
             </tr>
             <tr>
-              <td><li>Java</li></td>
-              <td><li>Blockchain</li></td>
+              <td>Cuyuma</td>
+              <td>Frontend Developer</td>
               <td>
                 <ul>
                   <li>Bootcamp: Desarrollo Frontend: git, Lógica P., HTML, CSS, JS, B, Sass, Node, React, Testing.</li>
                   <li>Desarrollo de proyectos y materiales para el aprendizaje teórico y práctico de los alumnos.</li>
                 </ul>
               </td>
-              <td><li>Publicidad digital</li></td>
+              <td>septiembre 2021, presente</td>
             </tr>
             <tr>
-              <td><li>Python</li></td>
-              <td><li>E-commerce</li></td>
+              <td>Comsitec</td>
+              <td>Frontend Developer</td>
               <td>
                 <ul>
                   <li>Desarrollo de aplicaciones e-commerce con VTEX IO y React bajo el marco de trabajo Scrum.</li>
                   <li>Maquetación web de diseños del Figma en React esencialmente con CSS.</li>
                 </ul>
               </td>
-              <td><li>Branding</li></td>
+              <td>septiembre 2021, presente</td>
             </tr>
           </tbody>
           <tfoot>
@@ -193,15 +193,17 @@
           </li>
         </ul>
         <h2>
-          🦄Copyright &copy; 2022
+          Sitio creado con mucho cariño por
           <a href="https://www.linkedin.com/in/joelmenachoa/" target="_blank" rel="noopener noreferrer">
             Joel! ❤️
           </a>
-          Todos los derechos reservadoss.🦄
+          / Todos los derechos reservados.🦄
         </h2>
       </div>
     </nav>
   </footer>
 </body>
+
+</html>
 
 </html>
