cambia de titulo

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </li>
           <li>
             <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer"
-              class="header-nav__menu-link header-nav__menu-link--active">Elliot</a>
+              class="header-nav__menu-link header-nav__menu-link--active">Joel</a>
           </li>
         </ul>
       </div>
