--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet" />
 
-  <title>Base 2 By Web 4B</title>
+  <title>JOEL MENACHO</title>
   <meta name="title" content="Base 2 By Web 4B" />
   <meta name="description"
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
 
-  <meta property="og:type" content="website" />
+  <!-- <meta property="og:type" content="website" />
   <meta property="og:url" content="https://elliotxleo.github.io/tecsup-frontend-o-g17/" />
   <meta property="og:title" content="Base 2 By Web 4B" />
   <meta property="og:description"
@@ -32,7 +32,7 @@
   <meta property="twitter:description"
     content="Bootcamp de Desarrollo Web Frontend donde se aprenderá temas como git, lógica de programación, HTML, CSS, JS, Bootstrap, Sass, Node, React, Firebase, Redux y Testing." />
   <meta property="twitter:image"
-    content="https://elliotxleo.github.io/tecsup-frontend-o-g17/assets/img/tecsup-frontend-o-g17.png" />
+    content="https://elliotxleo.github.io/tecsup-frontend-o-g17/assets/img/tecsup-frontend-o-g17.png" /> -->
 </head>
 
 <body class="body">
@@ -68,7 +68,7 @@
             Somos el mejor lugar donde puedes aprender sobre desarrollo web frontend. Asimismo, con Base 2 by Web 4B
             puedes hacer realidad ese sueño que tienes en mente. ¡Cambia tu vida!
           </p>
-          <a href="https://www.linkedin.com/in/elliotgaramendi/" class="button button--primary">¡Aprender gratis!</a>
+          <a href="https://www.linkedin.com/in/joelmenacho" class="button button--primary">¡Aprender gratis!</a>
         </div>
         <div class="i-hero__img-container">
           <img src="./assets/img/joelmenacho.jfif" alt="Elliot Garamendi" width="256" height="256"
