--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a href="#iContact" class="header-nav__menu-link">Contacto</a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer"
+            <a href="https://www.linkedin.com/in/joelmenachoa" target="_blank" rel="noopener noreferrer"
               class="header-nav__menu-link header-nav__menu-link--active">Joel</a>
           </li>
         </ul>
@@ -96,7 +96,7 @@
         <div class="section__cards">
           <div class="card-exp">
             <h4 class="card-exp__period">Julio 2021, presente</h4>
-            <h3 class="card-exp__company">Interbankt</h3>
+            <h3 class="card-exp__company">Digital Menacho</h3>
             <h4 class="card-exp__role">Frontend Developer</h4>
             <ul class="card-exp__activities">
               <li class="card-exp__activity">Desarrollo de aplicaciones con React y Redux basándome en un Figma y
@@ -108,17 +108,17 @@
           <div class="card-exp">
             <h4 class="card-exp__period">septiembre 2021, presente</h4>
             <h3 class="card-exp__company">Sistemas HM </h3>
-            <h4 class="card-exp__role">Docente Frontend</h4>
+            <h4 class="card-exp__role">Frontend Developer</h4>
             <ul class="card-exp__activities">
               <li class="card-exp__activity">Bootcamp: Desarrollo Frontend: git, Lógica P., HTML, CSS, JS, B, Sass,
                 Node, React, Testing.</li>
-              <li class="card-exp__activity">Desarrollo de proyectos y materiales para el aprendizaje teórico y práctico
-                de los alumnos.</li>
+              <li class="card-exp__activity">Investigación, optimización, mantenimiento y presentación aplicando
+                tecnologías modernas.</li>
             </ul>
           </div>
           <div class="card-exp">
             <h4 class="card-exp__period">septiembre 2021, presente</h4>
-            <h3 class="card-exp__company">DRIVEN</h3>
+            <h3 class="card-exp__company">COMSITEC</h3>
             <h4 class="card-exp__role">Frontend Developer</h4>
             <ul class="card-exp__activities">
               <li class="card-exp__activity">Desarrollo de aplicaciones e-commerce con VTEX IO y React bajo el marco de
@@ -128,7 +128,7 @@
           </div>
           <div class="card-exp">
             <h4 class="card-exp__period">junio 2021, enero 2022</h4>
-            <h3 class="card-exp__company">Idat</h3>
+            <h3 class="card-exp__company">Hogar Menacho</h3>
             <h4 class="card-exp__role">Docente</h4>
             <ul class="card-exp__activities">
               <li class="card-exp__activity">Curso: Diseño y Desarrollo Web: HTML, CSS, JS, Bootstrap, jQuery, PHP y
@@ -138,7 +138,7 @@
             </ul>
           </div>
         </div>
-        <a href="https://www.linkedin.com/in/elliotgaramendi/" class="button button--primary">Ver más experiencias</a>
+        <a href="https://www.linkedin.com/in/joelmenachoA" class="button button--primary">Ver más experiencias</a>
       </div>
     </section>
     <figure class="wave wave--reverse">
@@ -170,22 +170,22 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/ElliotXLeo">
+            <a href="https://github.com/joelmenacho">
               <img src="./assets/svg/logo-github.svg" alt="GitHub" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
-            <a href="https://www.linkedin.com/in/elliotgaramendi/">
+            <a href="https://www.linkedin.com/in/joelmenachoa/">
               <img src="./assets/svg/logo-linkedin.svg" alt="LinkedIn" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
-            <a href="https://www.instagram.com/elliotgaramendi/">
+            <a href="https://www.instagram.com/joelmenacho">
               <img src="./assets/svg/logo-instagram.svg" alt="Instagram" width="24" height="24" class="menu__img" />
             </a>
           </li>
           <li>
-            <a href="https://www.facebook.com/elliotgaramendi">
+            <a href="https://www.facebook.com/joelmenachoAlvarez">
               <img src="./assets/svg/logo-facebook.svg" alt="Facebook" width="24" height="24" class="menu__img" />
             </a>
           </li>
@@ -197,7 +197,7 @@
         </ul>
         <h2 class="section__footer-title">
           🦄Copyright &copy; 2022
-          <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer"
+          <a href="https://www.linkedin.com/in/joelmenachoa/" target="_blank" rel="noopener noreferrer"
             class="section__footer-link">
             Base2
           </a>
