--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           <div class="card-exp">
             <h4 class="card-exp__period">junio 2021, enero 2022</h4>
             <h3 class="card-exp__company">Hogar Menacho</h3>
-            <h4 class="card-exp__role">Docente</h4>
+            <h4 class="card-exp__role">Cordinador/h4>
             <ul class="card-exp__activities">
               <li class="card-exp__activity">Curso: Diseño y Desarrollo Web: HTML, CSS, JS, Bootstrap, jQuery, PHP y
                 MySQL.</li>
@@ -199,7 +199,6 @@
           🦄Copyright &copy; 2022
           <a href="https://www.linkedin.com/in/joelmenachoa/" target="_blank" rel="noopener noreferrer"
             class="section__footer-link">
-            Base2
           </a>
           Todos los derechos reservados.🦄
         </h2>
